gccida/g2/subst
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3799:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3804:4: error: expected ';' after expression
rtx v24; // r11 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3804:5: error: use of undeclared identifier 'v24'
rtx v24; // r11 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3808:4: error: expected ';' after expression
rtx v28; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3808:5: error: use of undeclared identifier 'v28'
rtx v28; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3809:6: error: use of undeclared identifier 'v29'
rtx *v29; // rdi 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3816:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3817:4: error: expected ';' after expression
rtx v38; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3817:5: error: use of undeclared identifier 'v38'
rtx v38; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3818:4: error: expected ';' after expression
rtx v39; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3818:5: error: use of undeclared identifier 'v39'
rtx v39; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3819:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3819:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3820:4: error: expected ';' after expression
rtx v41; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3820:5: error: use of undeclared identifier 'v41'
rtx v41; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3830:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+18h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3831:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+20h] [rbp-48h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3832:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op0_mode; // [rsp+2Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3851:20: error: expected ')'
v24 = subst( ( rtx)v8, from, to, 0, unique_copy); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/combine.c:3851:12: note: to match this '('
v24 = subst( ( rtx)v8, from, to, 0, unique_copy); 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/subst/src/obj/combine.o] Error 1
